--- a/app/views/bikes/edit.html.erb
+++ b/app/views/bikes/edit.html.erb
@@ -21,7 +21,7 @@
      
       <p>
         <%= f.label :bike_type %><br>
-        <%= f.select :bike_type, [['Cruiser', "Cruiser"],['Roadster', "Roadster"],['Sportbike', "Sportbike"], ['Touring', "Touring"]]%>
+        <%= f.select :bike_type, [['Cruiser', "Cruiser"],['Roadster', "Roadster"],['Sportbike', "Sportbike"], ['Touring', "Touring"], ['Adventure', "Adventure"]]%>
       </p>
 
       <p>Input a picture that will be used for the intro :</p>
