--- a/app/views/learns/index.html.erb
+++ b/app/views/learns/index.html.erb
@@ -30,17 +30,33 @@
       <% end %>
     <%# </tbody>
   </table> %>
+<div class="flexi">
+  <div>
+    <ul class="containerwrap">
+      <% @learns.each do |learn| %>
+        <li class="childwrap" onmouseover="this.style.cursor='pointer'" onClick="window.location.href='<%= learn_path(learn) %>';">
+          <h3><%= learn.learntitle %></h3>
 
-<ul class="containerwrap">
-  <% @learns.each do |learn| %>
-    <li class="childwrap" onmouseover="this.style.cursor='pointer'" onClick="window.location.href='<%= learn_path(learn) %>';">
-      <h3><%= learn.learntitle %></h3>
+          <p class="box3lines"><%= raw learn.text.gsub(/\n/, '<br/>').html_safe %></p>
+          
+          </li>
+      <% end %>
+    </ul>
+  </div>
 
-      <p class="box3lines"><%= raw learn.text.gsub(/\n/, '<br/>').html_safe %></p>
-      
-      </li>
-  <% end %>
-</ul>
+  <div class="ads160by600">
+    <script type="text/javascript">
+    google_ad_client = "ca-pub-8344756613466881";
+    google_ad_slot = "7468412161";
+    google_ad_width = 160;
+    google_ad_height = 600;
+    </script>
+    <!-- Learn ad -->
+    <script type="text/javascript"
+    src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>
+  </div>
+</div>
 
   <br>
 </div>
