--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -10,7 +10,7 @@
 
       <p>
         <%= f.label :brand %><br>
-        <%= f.select :brand, [['BMW', "BMW"],['Ducati', "Ducati"],['Harley-Davidson', "Harley-Davidson"], ['Honda', "Honda"], ['Suzuki', "Suzuki"],['Kawasaki', "Kawasaki"],['Yamaha', "Yamaha"]]%>
+        <%= f.select :brand, [['BMW', "BMW"],['Ducati', "Ducati"],['Harley-Davidson', "Harley-Davidson"], ['Honda', "Honda"], ['Suzuki', "Suzuki"],['Triumph', "Triumph"],['Kawasaki', "Kawasaki"],['Yamaha', "Yamaha"]]%>
       </p>
      
       <p>
