--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -3,7 +3,7 @@
 <h2>Filter option</h2>
 
 <p>Filter per brand</p>
- <%= select_tag(:brand, options_for_select([['-', "-"],['BMW', "bmw"], ['Ducati', "ducati"],['Honda', "honda"], ['Suzuki', "suzuki"],['Kawasaki', "kawasaki"],['Yamaha', "Yamaha"]]), :onchange => 'filter_function()') %>
+ <%= select_tag(:brand, options_for_select([['-', "-"],['BMW', "bmw"], ['Ducati', "ducati"],['Honda', "honda"],['Triumph', "triumph"], ['Suzuki', "suzuki"],['Kawasaki', "kawasaki"],['Yamaha', "Yamaha"]]), :onchange => 'filter_function()') %>
 
  <p>Filter per type</p>
  <%= select_tag(:type, options_for_select([['-', "-"],['Sportbike', "sportbike"], ['Cruiser', "cruiser"],['Roadster', "Roadster"], ['Touring', "Touring"],['Adventure', "Adventure"]]), :onchange => 'filter_function()') %>
