--- a/app/assets/stylesheets/learns.scss
+++ b/app/assets/stylesheets/learns.scss
@@ -8,7 +8,7 @@
 }
 
 .containerwrap{
-    padding: 0;
+  padding: 0;
   list-style: none;
   margin: auto;
   max-width: 1000px;
@@ -20,9 +20,9 @@
 
 .childwrap {
   border: 1px solid #ddd;
-  padding: 5px;
-  width: 300px;
-  margin-top: 10px;
+  padding: 10px;
+  width: 240px;
+  margin: 10px;
   
   text-align: center;
 
